CVS HEAD:
 * balancing change: reduced cost of dwarvish fighter by 1 gold; made Lieutenant more powerful
 * user interface improvements:
   * made it so a unit's defense in a terrain is displayed over the terrain when choosing to move the unit
   * added 'Advanced' preferences section with 'binary save files' and 'show combat' as initial options
   * fix editor file chooser when starting directory has many files (#11698)
   * made it so network dialogs show progress of data transfers again
   * starting position in editor now starts at player 1 (#10625)
   * fixed female units not appearing in help (broken since 0.9.0)
   * reduced required width of weapon area in help
   * better diagnostics on parsing: file inclusion sequence
   * fixed items appearing in traits description (#12603)
   * preserve order of unit traits so no more quick,resilient but 33 vs 34 HP
   * note= attribute for [objectives], shown as footer, eg. for hints (#12927)
   * tweaked multiplayer lobby
   * more distinguishable objectives dialog
   * slider is now less bright
   * the text of disabled buttons is now grayed out
 * campaign improvements:
   * Eastern Invasion:
     * fixed Dacyn not being [recall]-ed in Unexpected Appearance (#10619)
     * fixed killing enemies in wrong order not resulting in a victory in
       Northern Outpost (#12922)
     * fixed several bugs with Captured
     * new map and scenario modification for Drowned Plains
     * changed Skeletal Dragon resistances for Drowned Plains
   * Heir to the Throne:
     * fixed thieves not appearing in Siege of Elensefar (forum thread 5719)
   * Son of the Black Eye:
     * shamans are no longer recallable (#11932)
     * killing enemy leader in Siege of Barag Gor is no longer a win
     * End of Peace turn limit increased 24 -> 26 due to Lieutenant upgrade
 * multiplayer improvements:
   * next_scenario: tentative start of MP campaign support
 * unit graphics and sound improvements 